# checkin_glados

./: .gitignore  README.md  config.example.toml  pyproject.toml  run_glados_checkin.bat
.github/workflows/: glados-checkin.yml
data/: checkin_history.csv
glados_checkin/: __main__.py  cli.py  client.py  config.py  history.py  models.py  tasks.py
tests/: test_client.py  test_config.py  test_helpers.py  test_history.py  test_tasks.py
