[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "glados-checkin"
version = "0.1.0"
description = "Daily GLaDOS check-in CLI with CSV history and Windows task scheduling"
readme = "README.md"
requires-python = ">=3.11"

[tool.setuptools.packages.find]
include = ["glados_checkin*"]
